Code - Overflowing over TOC: Fixed

--- a/client/scss/components/_code_block.scss
+++ b/client/scss/components/_code_block.scss
@@ -1,6 +1,7 @@
 // Inline code
 code {
   border-radius: 3px;
+  overflow-wrap: break-word;
 }
 
 // Code block
